templates/todo/projects/nodejs-mongo-aks/src/web/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-web
  template:
    metadata:
      labels:
        app: todo-web
    spec:
      containers:
        - name: todo-web
          image: ${SERVICE_WEB_IMAGE_NAME}
          ports:
            - containerPort: 3000
