templates/todo/projects/nodejs-mongo-aks/src/web/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-web
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: todo-web
